--- a/情境題.md
+++ b/情境題.md
@@ -1,5 +1,5 @@
 # 題目一  
- ### 過往的經驗我們會經由壓力測試評估系統承載能力，並且依照服務預估的規模來提前加開服務並擴展 infra，將服務分散在獨立的 server 來確保負載均衡，確保服務不會因為承受不起 peak loads 而崩潰。流量入站後，密切關注各項監控指標，及時發現和處理潛在問題。
+ #### 過往的經驗我們會經由壓力測試評估系統承載能力，並且依照服務預估的規模來提前加開服務並擴展 infra，將服務分散在獨立的 server 來確保負載均衡，確保服務不會因為承受不起 peak loads 而崩潰。流量入站後，密切關注各項監控指標，及時發現和處理潛在問題。
 
 A. 預先加開並且善用自動擴展  
 - 在網頁未正式上線前先行評估服務所需效能，提前加開機器避免流量失衡。  
@@ -16,7 +16,7 @@ C. 完善設置監控
 ---
 
 # 題目二  
- ### 在只有其中一台發生問題的情況下，以往的經驗告訴我比較有可能是系統效能問題，可能是流量失衡沒有平均分配，或是程式有不正常請求。首先我會先從 **A** 步驟開始排查。
+ #### 在只有其中一台發生問題的情況下，以往的經驗告訴我比較有可能是系統效能問題，可能是流量失衡沒有平均分配，或是程式有不正常請求。首先我會先從 **A** 步驟開始排查。
 
  A. 檢查系統資源使用情況  
 - 到 Grafana 檢查 CPU、內存、磁盤 I/O、網路流量等資源使用情況，確保沒有資源瓶頸。  
@@ -31,7 +31,7 @@ C. 完善設置監控
 ---
 
 # 題目三  
-### 通常雲端會有其他方式可以登入機器，我會首先嘗試。如果仍無法登入，不排除機器死當狀況，會嘗試重啟。也有遇過 sshd 程序崩潰的狀態，比較常見的錯誤可能是 SSH key 設定錯誤或已被更換，所以我會依照以下順序排除。
+#### 通常雲端會有其他方式可以登入機器，我會首先嘗試。如果仍無法登入，不排除機器死當狀況，會嘗試重啟。也有遇過 sshd 程序崩潰的狀態，比較常見的錯誤可能是 SSH key 設定錯誤或已被更換，所以我會依照以下順序排除。
 
  A. 與組員確認是否遭遇相同狀況，如果他能登入，確定 SSH key 是否已經更換  
 
@@ -43,7 +43,7 @@ C. 完善設置監控
 ---
 
 # 題目四  
-### 在配置 Filebeat 或 Fluentd 的過程中，注意日誌格式是否與既有的 index 一致，或是根據業務相關性來考量是否放入既有的 index。如果是 K8s，通常是統一的日誌規格，透過標準的日誌收集器即可收集；若是單獨的 VM 服務，則需特別注意日誌規格，以免污染原有的 index。如果建立新的 index，需注意命名規則以方便管理，並設定日誌 retention 的週期，再設置冷儲存週期以降低日誌存儲成本。
+#### 在配置 Filebeat 或 Fluentd 的過程中，注意日誌格式是否與既有的 index 一致，或是根據業務相關性來考量是否放入既有的 index。如果是 K8s，通常是統一的日誌規格，透過標準的日誌收集器即可收集；若是單獨的 VM 服務，則需特別注意日誌規格，以免污染原有的 index。如果建立新的 index，需注意命名規則以方便管理，並設定日誌 retention 的週期，再設置冷儲存週期以降低日誌存儲成本。
 
  A. 配置 Elasticsearch 索引  
 - 在 Elasticsearch 中配置新的索引模式，以適應新服務的日誌結構。  
