--- a/情境題.md
+++ b/情境題.md
@@ -39,8 +39,7 @@ B. 使用 EC2 系統管理員 (SSM) 進行連接
    - 使用 AWS Systems Manager (SSM) 來連接到 EC2 實例，進行故障排查。
    - 確保 EC2 實例已安裝並配置 SSM 代理。
 
-C. 如果仍無法解決，只能嘗試重啟機器，懷疑是 sshd 掛了。
-
+\C. 如果仍無法解決，只能嘗試重啟機器，懷疑是 sshd 掛了。
 ---
 
 # 題目四  
