--- a/情境題.md
+++ b/情境題.md
@@ -33,13 +33,13 @@ C. 完善設置監控
 # 題目三  
 #### 通常雲端會有其他方式可以登入機器，我會首先嘗試。如果仍無法登入，不排除機器死當狀況，會嘗試重啟。也有遇過 sshd 程序崩潰的狀態，比較常見的錯誤可能是 SSH key 設定錯誤或已被更換，所以我會依照以下順序排除。
 
-A. 與組員確認是否遭遇相同狀況，如果他能登入，確定 SSH key 是否已經更換。
+ A. 與組員確認是否遭遇相同狀況，如果他能登入，確定 SSH key 是否已經更換。
 
-B. 使用 EC2 系統管理員 (SSM) 進行連接
-   - 使用 AWS Systems Manager (SSM) 來連接到 EC2 實例，進行故障排查。
-   - 確保 EC2 實例已安裝並配置 SSM 代理。
+ B. 使用 EC2 系統管理員 (SSM) 進行連接
+- 使用 AWS Systems Manager (SSM) 來連接到 EC2 實例，進行故障排查。
+- 確保 EC2 實例已安裝並配置 SSM 代理。
 
-\C. 如果仍無法解決，只能嘗試重啟機器，懷疑是 sshd 掛了。
+ C. 如果仍無法解決，只能嘗試重啟機器，懷疑是 sshd 掛了。
 ---
 
 # 題目四  
